--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
 
 <h1>about aiml dep</h1>
 <p>My first exp abot aiml</p>
+<img src="https://www.nsec.ac.in/images/aiml-homepage-01.jpg">
+</body>
+</html>
+
 
 </body>
 </html>
