--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>pmg first exp</title>
 </head>
 <body>
-
+       <h6>Menu</h6>
+       <a href ="about.html"> About</a>
+       <a href ="admissions.html">Admissions</a>
 <h1>pmg lab</h1>
 <p>My first exp in git hub</p>
 
